# finitedepth

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  doc8.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  runtest.yml
dipcoatimage/finitedepth/: __init__.py  analysis.py  coatinglayer.py  coatinglayer_param.py  experiment.py  polysubstrate.py  polysubstrate_param.py  rectcoatinglayer.py  rectcoatinglayer_param.py  rectsubstrate.py  rectsubstrate_param.py  reference.py  reference_param.py  serialize.py  substrate.py  substrate_param.py  version.py
dipcoatimage/finitedepth/samples/: config.yml
dipcoatimage/finitedepth/tests/: test_analysis.py  test_coatinglayer.py  test_experiment.py  test_rectsubstrate.py  test_reference.py  test_serialize.py  test_substrate.py
dipcoatimage/finitedepth/util/: __init__.py  dataclass.py  frechet.py  geometry.py  imgprocess.py  importing.py  parameters.py  path.py  testing.py  typing.py
dipcoatimage/finitedepth/util/tests/: test_util.py
dipcoatimage/finitedepth_gui/: __init__.py  analysisgui.py  controlwidgets.py  core.py  datarole.py  display.py  importerwidget.py  importwidget.py  inventory.py  mainwindow.py  model.py  pipeline.py  py.typed  qt_mock.py  roi.py  roimodel.py  typing.py  variablewidget.py  view.py  visualize.py  worker.py  workers.py
dipcoatimage/finitedepth_gui/controlwidgets/: __init__.py  analysiswidget.py  base.py  controlwidget.py  exptwidget.py  layerwidget.py  refwidget.py  substwidget.py
dipcoatimage/finitedepth_gui/controlwidgets/tests/: test_coatinglayerwidget.py  test_referencewidget.py  test_substratewidget.py
dipcoatimage/finitedepth_gui/display/: __init__.py  display.py  maindisplay.py  roidisplay.py  toolbar.py  videostream.py
dipcoatimage/finitedepth_gui/display/tests/: test_maindisplay.py  test_roidisplay.py
dipcoatimage/finitedepth_gui/tests/: test_analysisgui.py  test_coatinglayer.py  test_display.py  test_importwidget.py  test_reference.py  test_roi.py  test_roimodel.py  test_substrate.py
dipcoatimage/finitedepth_gui/util/: __init__.py  abc.py  typing.py
dipcoatimage/finitedepth_gui/views/: __init__.py  analysisview.py  dataviewtab.py  exptlistview.py  exptview.py  importview.py  layerview.py  listview.py  refview.py  roiview.py  substview.py
dipcoatimage/finitedepth_gui/visualize/: __init__.py  base.py  imgprocess.py  visualizer.py
dipcoatimage/finitedepth_gui/workers/: __init__.py  analysisworker.py  base.py  exptworker.py  masterworker.py  refworker.py  substworker.py
dipcoatimage/finitedepth_gui/workers/tests/: test_referenceworker.py  test_substrateworker.py
doc/source/: analyzer-reference.rst  background.rst  command-reference.rst  conf.py  config-reference.rst  development.rst  example.yml  index.rst  install.rst  intro.rst  plugin.rst  reference.rst  tutorial.rst
doc/source/_templates/autoapi/: index.rst
doc/source/dev-guide/: caching.rst  ci.rst  index.rst  testing.rst
doc/source/explanation/: caching.rst  design.rst  documentation.rst  error-notes.rst  generic-typing.rst  generic.rst  index.rst  install.rst  slots.rst  testing.rst
doc/source/guide/: analyze-runtime.rst  circlayer-plot.py  circlayer.py  circsubstrate-plot.py  circsubstrate.py  config.yml  dataclass-design.rst  define-your-own.rst  extend-configure.rst  index.rst
doc/source/reference/: analysis.rst  coatinglayer.rst  experiment.rst  finitedepth-gui.controlwidgets.rst  finitedepth-gui.core.rst  finitedepth-gui.display.rst  finitedepth-gui.importerwidget.rst  finitedepth-gui.inventory.rst  finitedepth-gui.mainwindow.rst  finitedepth-gui.model.rst  finitedepth-gui.pipeline.rst  finitedepth-gui.roi.rst  finitedepth-gui.roimodel.rst  finitedepth-gui.rst  finitedepth-gui.variablewidget.rst  finitedepth-gui.views.rst  finitedepth-gui.visualize.rst  finitedepth-gui.worker.rst  finitedepth-gui.workers.rst  finitedepth.rst  finitedepth.serialize.rst  finitedepth.util.rst  index.rst  reference.rst  substrate.rst
doc/source/tutorial/: config-extended.yml  config-rect.yml  config-rect2.yml  config-subst.yml  config.json  config.rst  config.yml  config1.yml  config2.json  config3.yml  index.rst  tutorial.rst
doc/source/user-guide/: dataclass-design.rst  defining-reference.rst  defining-substrate.rst  index.rst  installation.rst  introduction.rst
doc/source/user-guide/explanation/: generic-typing.rst  index.rst
doc/source/user-guide/how-to/: dataclass-design.rst  defining-reference.rst  defining-substrate.rst  index.rst
doc/source/user-guide/tutorials/: index.rst
requirements/: doc.txt  gui.txt  install.txt  test.txt
src/dipcoatimage/finitedepth/: __init__.py  __main__.py  analysis.py  analysis_param.py  cache.py  coatinglayer.py  coatinglayer_param.py  experiment.py  experiment_param.py  fastexperiment.py  fastexperiment_param.py  parameters.py  polysubstrate.py  polysubstrate_param.py  rectcoatinglayer.py  rectcoatinglayer_param.py  rectsubstrate.py  rectsubstrate_param.py  reference.py  reference_param.py  serialize.py  substrate.py  substrate_param.py
src/dipcoatimage/finitedepth/data/: config.yml
src/dipcoatimage/finitedepth/tests/: test_serialize.py
src/dipcoatimage/finitedepth/util/: __init__.py  dtw.py  geometry.py  imgprocess.py  importing.py  parameters.py  path.py  typing.py
src/finitedepth/: __init__.py  analyzers.py  cache.py  coatinglayer.py  reference.py  substrate.py
tests/: test_analysis.py  test_analyzers.py  test_serialize.py  test_util.py
