[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dipcoatimage-finitedepth"
description = "Image analysis for finite depth dip coating process"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
dynamic = [
    "version",
    "dependencies",
]

[project.urls]
repository = "https://github.com/dipcoat-image/finitedepth"

[project.scripts]
finitedepth = "dipcoatimage.finitedepth:main"

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "matplotlib",
    "furo",
    "numpydoc",
    "sphinx",
    "sphinx-autoapi",
]
dev = [
    "flake8",
    "flake8-docstrings",
    "black",
    "isort",
    "docformatter",
    "doc8",
    "mypy==1.4.1",
    "types-Pillow",
    "types-PyYAML",
    "dipcoatimage-finitedepth[test,doc]",
]

[tool.setuptools.dynamic]
version = {attr = "dipcoatimage.finitedepth.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true
